--- a/lecture02/index.css
+++ b/lecture02/index.css
@@ -22,12 +22,11 @@
 }
 
 .navbar {
-  box-shadow: 0px 5px 10px 0px #aaa;
-  /* position: fixed; */
+  box-shadow: 0px 5px 10px 0px rgb(239, 233, 213);
   width: 100%;
-  background: #fff;
-  color: #000;
-  opacity: 0.85;
+  background: #27445D;
+  color: rgb(239, 233, 213);
+  opacity: 0.95;
   z-index: 100;
 }
 
@@ -54,7 +53,7 @@
 }
 
 .navbar a {
-  color: #444;
+  color:rgb(239, 233, 213);
   text-decoration: none;
   font-weight: 500;
   transition: color 0.3s ease-in-out;
@@ -129,7 +128,7 @@
 
   .navbar .menu-items {
     padding-top: 100px;
-    background: #fff;
+    background: rgb(39, 68, 93);
     height: 100vh;
     max-width: 300px;
     transform: translate(-150%);
@@ -138,8 +137,7 @@
     margin-left: -40px;
     padding-left: 40px;
     transition: transform 0.5s ease-in-out;
-    box-shadow: 5px 0px 10px 0px #aaa;
-    overflow: scroll;
+    box-shadow: 5px 0px 10px 0px rgb(239, 233, 213);
   }
 
   .navbar .menu-items li {
@@ -184,35 +182,97 @@
   /* Web CSS */
 
   .body-container {
-    padding: 10px;
-    border: 2px solid red;
-    height: 100vh;
+    background-color: rgb(39, 68, 93);
+    display: flex;
+    flex-direction: column;
   }
 
   .myProfile-container {
-    border: 2px solid greenyellow;
-    height: 100%;
+    height: 100vh;
     display: flex;
+    justify-content: center;
+    background-color: rgb(73, 125, 116);
+    color: rgb(239, 233, 213);
   }
 
   .description-container {
-    border: 2px solid blue;
     margin: 1rem;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    line-height: 30px;
+    border-radius: 0px;
+    padding: 10px;
+    font-size: 18px;
   }
 
   .profile-img-container {
-    border: 2px solid salmon;
-    margin: 1rem;
     flex: 1;
   }
 
   .description-heading {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 70px;
+    margin-bottom: 20px;
+
   }
   .description-subHeading{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(73, 125, 116);
+    color: rgb(113, 187, 178);
+    font-size: 29px;
+    line-height: 35px;
   }
   .description-content{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Ubuntu', serif;
+  }
+  .description-content-button {
+    max-width: 90px;
+    padding: 10px;
+    background-color: rgb(39, 68, 93);
+    color: rgb(239, 233, 213);
+    border: none;
+    cursor: pointer;
+    border-radius: 30px;
+    margin-top: 10px;
+  }
+
+  .profile-img-container img {
+    height: 100%;
+    width: 100%;
+  }
+  .projects-container {
+    display: flex;
+    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .projects-container-head {
+    flex: 1;
+    margin: 1rem;
+    
+  }
+
+  .projects-container-heading {
+    font-size: 100px;
+    margin-bottom: 40px;
+    color: rgb(239, 233, 213);
+  }
+
+  .projects-container-head img {
+    width: 100%;
+    min-height: 290px;
+  }
+  .projects-container-description {
+    flex: 1;
+    color: rgb(239, 233, 213);
+    margin: 1rem;
+    
+  }
+  .projects-container-description h3{
+    margin: 1rem 0;
+  }
+  .projects-container-description p{
+    background-color: rgb(73, 125, 116);
   }
